--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2516,6 +2516,9 @@
     <ClInclude Include="include\isostillbackground.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\isogroundindexer.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\terraintile.h">
       <Filter>game</Filter>
     </ClInclude>
