--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -272,6 +272,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\interfmanager.cpp" />
     <ClCompile Include="src\interftexthooks.cpp" />
     <ClCompile Include="src\isoengineground.cpp" />
+    <ClCompile Include="src\isoenginegroundhooks.cpp" />
     <ClCompile Include="src\isolayers.cpp" />
     <ClCompile Include="src\itemcategory.cpp" />
     <ClCompile Include="src\itemtransferhooks.cpp" />
@@ -563,6 +564,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2tree.h" />
     <ClInclude Include="include\isoborder.h" />
+    <ClInclude Include="include\isoenginegroundhooks.h" />
     <ClInclude Include="include\isoground2.h" />
     <ClInclude Include="include\isogroundindexer.h" />
     <ClInclude Include="include\isostillbackground.h" />
