Add IEncLayout structure

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2546,6 +2546,9 @@
     <ClInclude Include="include\isoborder.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\enclayout.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
