--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -563,6 +563,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\d2color.h" />
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2tree.h" />
+    <ClInclude Include="include\enclayout.h" />
     <ClInclude Include="include\isoborder.h" />
     <ClInclude Include="include\isoenginegroundhooks.h" />
     <ClInclude Include="include\isoground2.h" />
