--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -246,6 +246,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\effectinterfhooks.cpp" />
     <ClCompile Include="src\effectresult.cpp" />
     <ClCompile Include="src\effectresulthooks.cpp" />
+    <ClCompile Include="src\enclayoutunithooks.cpp" />
     <ClCompile Include="src\enclayoutspell.cpp" />
     <ClCompile Include="src\enclayoutunit.cpp" />
     <ClCompile Include="src\eventconditioncat.cpp" />
@@ -565,6 +566,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\d2map.h" />
     <ClInclude Include="include\d2tree.h" />
     <ClInclude Include="include\enclayout.h" />
+    <ClInclude Include="include\enclayoutunithooks.h" />
     <ClInclude Include="include\enclayoutunit.h" />
     <ClInclude Include="include\isoborder.h" />
     <ClInclude Include="include\isoenginegroundhooks.h" />
