--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -421,6 +421,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\unitpositionlist.cpp" />
     <ClCompile Include="src\unitpositionmap.cpp" />
     <ClCompile Include="src\unitsforhire.cpp" />
+    <ClCompile Include="src\unittypedescriptor.cpp" />
     <ClCompile Include="src\unitutils.cpp" />
     <ClCompile Include="src\untransformeffecthooks.cpp" />
     <ClCompile Include="src\ussoldierimpl.cpp" />
@@ -934,6 +935,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\unitpositionmap.h" />
     <ClInclude Include="include\unitpositionpair.h" />
     <ClInclude Include="include\unitsforhire.h" />
+    <ClInclude Include="include\unittypedescriptor.h" />
     <ClInclude Include="include\unitutils.h" />
     <ClInclude Include="include\untransformeffecthooks.h" />
     <ClInclude Include="include\usglobal.h" />
