--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -997,6 +997,9 @@
     <ClCompile Include="src\enclayoutunithooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\tileprefixes.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2560,6 +2563,9 @@
     </ClInclude>
     <ClInclude Include="include\enclayoutunithooks.h">
       <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\tileprefixes.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
