Add CampaignStream and its api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -208,6 +208,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\buildingcat.cpp" />
     <ClCompile Include="src\buildingtype.cpp" />
     <ClCompile Include="src\button.cpp" />
+    <ClCompile Include="src\campaignstream.cpp" />
     <ClCompile Include="src\capitaldata.cpp" />
     <ClCompile Include="src\capitaldatlist.cpp" />
     <ClCompile Include="src\citystackinterf.cpp" />
@@ -539,6 +540,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\buildingcat.h" />
     <ClInclude Include="include\buildingtype.h" />
     <ClInclude Include="include\button.h" />
+    <ClInclude Include="include\campaignstream.h" />
     <ClInclude Include="include\canselect.h" />
     <ClInclude Include="include\capital.h" />
     <ClInclude Include="include\capitaldata.h" />
