--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -479,6 +479,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\2denginemapimpl.h" />
     <ClInclude Include="include\aipriority.h" />
     <ClInclude Include="include\aispellcat.h" />
+    <ClInclude Include="include\animations.h" />
     <ClInclude Include="include\attack.h" />
     <ClInclude Include="include\attackclasscat.h" />
     <ClInclude Include="include\attackimpl.h" />
