--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2573,6 +2573,9 @@
     <ClInclude Include="include\campaignstream.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\animations.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
