--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -580,6 +580,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mainview2.h" />
     <ClInclude Include="include\mainview2hooks.h" />
     <ClInclude Include="include\midisogroundindexer.h" />
+    <ClInclude Include="include\mqpresentationmanager.h" />
     <ClInclude Include="include\mq_c_s.h" />
     <ClInclude Include="include\d2osexception.h" />
     <ClInclude Include="include\d2pair.h" />
