--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2576,6 +2576,9 @@
     <ClInclude Include="include\animations.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\mqpresentationmanager.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
