--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1000,6 +1000,9 @@
     <ClCompile Include="src\tileprefixes.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\stringpairarrayptr.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
     <ClCompile Include="src\campaignstream.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -2568,6 +2571,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\campaignstream.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\stringpairarrayptr.h">
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\animations.h">
