--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1046,6 +1046,9 @@
     <ClCompile Include="src\editorglobaldata.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\midserverlogic.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
