--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -388,6 +388,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\scenariodataarray.cpp" />
     <ClCompile Include="src\scenarioheader.cpp" />
     <ClCompile Include="src\scripts.cpp" />
+    <ClCompile Include="src\scriptutils.cpp" />
     <ClCompile Include="src\settings.cpp" />
     <ClCompile Include="src\sitemerchantinterf.cpp" />
     <ClCompile Include="src\smartptr.cpp" />
@@ -893,6 +894,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\scenarioheader.h" />
     <ClInclude Include="include\scenarioinfo.h" />
     <ClInclude Include="include\scripts.h" />
+    <ClInclude Include="include\scriptutils.h" />
     <ClInclude Include="include\settings.h" />
     <ClInclude Include="include\sitecategories.h" />
     <ClInclude Include="include\sitemerchantinterf.h" />
