--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -194,6 +194,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\bindings\itembaseview.cpp" />
     <ClCompile Include="src\bindings\itemview.cpp" />
     <ClCompile Include="src\bindings\locationview.cpp" />
+    <ClCompile Include="src\bindings\modifierview.cpp" />
     <ClCompile Include="src\bindings\playerview.cpp" />
     <ClCompile Include="src\bindings\point.cpp" />
     <ClCompile Include="src\bindings\scenariovariableview.cpp" />
@@ -543,6 +544,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\bindings\itembaseview.h" />
     <ClInclude Include="include\bindings\itemview.h" />
     <ClInclude Include="include\bindings\locationview.h" />
+    <ClInclude Include="include\bindings\modifierview.h" />
     <ClInclude Include="include\bindings\playerview.h" />
     <ClInclude Include="include\bindings\point.h" />
     <ClInclude Include="include\bindings\scenariovariableview.h" />
