Add IInterfBorderDisplay structure and its vftable

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2629,6 +2629,9 @@
     <ClInclude Include="include\d2assert.h">
       <Filter>utils</Filter>
     </ClInclude>
+    <ClInclude Include="include\interfborderdisplay.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
