--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -587,6 +587,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\enclayout.h" />
     <ClInclude Include="include\enclayoutunithooks.h" />
     <ClInclude Include="include\enclayoutunit.h" />
+    <ClInclude Include="include\interfborderdisplay.h" />
     <ClInclude Include="include\isoborder.h" />
     <ClInclude Include="include\isoenginegroundhooks.h" />
     <ClInclude Include="include\isoground2.h" />
