--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1058,6 +1058,9 @@
     <ClCompile Include="src\bindings\modifierview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\fortview.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2666,6 +2669,9 @@
       <Filter>bindings</Filter>
     </ClInclude>
     <ClInclude Include="include\bindings\modifierview.h">
+      <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\fortview.h">
       <Filter>bindings</Filter>
     </ClInclude>
   </ItemGroup>
