--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1025,6 +1025,9 @@
     <ClCompile Include="src\imageptrvector.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\rendererimpl.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
     <ClCompile Include="src\midcondgamemode.cpp">
       <Filter>features\custom event conditions</Filter>
     </ClCompile>
