Define IntVector and its api

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1064,6 +1064,9 @@
     <ClCompile Include="src\bindings\ruinview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\intvector.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2679,6 +2682,9 @@
     </ClInclude>
     <ClInclude Include="include\bindings\ruinview.h">
       <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\intvector.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
