--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -1000,6 +1000,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\usunitimpl.h" />
     <ClInclude Include="include\utils.h" />
     <ClInclude Include="include\version.h" />
+    <ClInclude Include="include\viewexportedleaderinterf.h" />
     <ClInclude Include="include\visitors.h" />
     <ClInclude Include="include\widgetinterf.h" />
     <ClInclude Include="resource.h" />
