--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1076,6 +1076,9 @@
     <ClCompile Include="src\intvector.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\enclayoutstack.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2705,6 +2708,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\leaderunitdescriptor.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\enclayoutstack.h">
       <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
