--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1079,6 +1079,9 @@
     <ClCompile Include="src\enclayoutstack.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\enclayoutstackhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2712,6 +2715,9 @@
     </ClInclude>
     <ClInclude Include="include\enclayoutstack.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\enclayoutstackhooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
